crates/rattler_conda_types/src/repo_data/snapshots/rattler_conda_types__repo_data__patches__test__null_values.snap
---
source: crates/rattler_conda_types/src/repo_data/patches.rs
expression: record_patch
---
depends: []
constrains: []
track_features: ~
features: ~
license: ~
license_family: ~
