crates/rattler_conda_types/src/repo_data/snapshots/rattler_conda_types__repo_data__patches__test__patch_remove_wheels.snap
---
source: crates/rattler_conda_types/src/repo_data/patches.rs
expression: repodata
---
info:
  subdir: linux-64
packages: {}
packages.conda:
  pytorch-cpu-2.6.0-cpu_mkl_h8b52ce0_104.conda:
    arch: x86_64
    build: cpu_mkl_h8b52ce0_104
    build_number: 104
    depends:
      - pytorch 2.6.0 cpu_mkl*104
    license: BSD-3-Clause
    license_family: BSD
    md5: e3a5a0c7917998be56d9e21afd80dde8
    name: pytorch-cpu
    platform: win
    sha256: 8926532f9e39c58e6a4eda21e7de14b9320828d8ba97b6ad05ce2d092d0dce58
    size: 51596
    subdir: win-64
    timestamp: 1744247964462
    track_features: pytorch-cpu
    version: 2.6.0
packages.whl: {}
removed:
  - requests-2.32.5-py3-none-any.whl
repodata_version: 1
